Handle some ArrayInitializer DOM conversion and bindings
Signed-off-by: David Thompson <davthomp@redhat.com>